cmake_minimum_required(VERSION 3.23)
project(Algorithm)

set(CMAKE_CXX_STANDARD 23)

add_executable(creatSet Set/creatSet.cpp)
add_executable(setToVector Set/setToVector.cpp)
add_executable(uniqueRow Set/uniqueRow.cpp)
add_executable(encodingString Stack/encodingString.cpp)
add_executable(numberToBinary Stack/numberToBinary.cpp)
add_executable(reverseVector Stack/reverseVector.cpp)
add_executable(stackConcat Stack/stackConcat.cpp)
add_executable(stickSpan Stack/stickSpan.cpp)

add_executable(firstToLast Queue/firstToLast.cpp)
add_executable(superPrimeNum Queue/superPrimeNum.cpp)
add_executable(messageDisplay Queue/messageDisplay.cpp)

add_executable(test test.cpp)
add_executable(reverseString Stack/reverseString.cpp)
add_executable(popMin Stack/popMin.cpp)
add_executable(reversals Stack/reversals.cpp)
add_executable(removeElement Stack/removeElement.cpp)
add_executable(decodeString Stack/decodeString.cpp)
add_executable(transformVector Queue/transformVector.cpp)
add_executable(generateBinary Queue/generateBinary.cpp)
add_executable(superPrime Queue/superPrime.cpp)
add_executable(notificationDisplay Queue/notificationDisplay.cpp)
add_executable(factorSum NumberSolution/factorSum.cpp)
add_executable(firstNegative Queue/firstNegative.cpp)
add_executable(cluster Queue/cluster.cpp)
add_executable(rotOrange Queue/rotOrange.cpp)

add_executable(longest_increase_subsequence DynamicPlanning/longest_increase_subsequence.cpp)
add_executable(createLinkedList LinkedList/createLinkedList.cpp)
add_executable(positionFind LinkedList/positionFind.cpp)
add_executable(factorialCal Recursion/factorialCal.cpp)
add_executable(doubleLinkedList LinkedList/doubleLinkedList.cpp)
add_executable(createList LinkedList/createList.cpp)
add_executable(bestOfTwo Vector/bestOfTwo.cpp)
add_executable(createPair Pair_Map/createPair.cpp)
add_executable(countUnique Set/countUnique.cpp)
add_executable(BinarySearch Search/BinarySearch.cpp)
add_executable(LinearSearch Search/LinearSearch.cpp)
add_executable(firstPosition Search/findPosition.cpp)
add_executable(boundFuncion Search/boundFuncion.cpp)
add_executable(SelectionSort Sort/SelectionSort.cpp)
add_executable(BubbleSort Sort/BubbleSort.cpp)
add_executable(InsertionSort Sort/InsertionSort.cpp)
add_executable(CountingSort Sort/CountingSort.cpp)
add_executable(MergeSort Sort/MergeSort.cpp)
add_executable(QuickSort Sort/QuickSortLomuto.cpp)
add_executable(HeapSort Sort/HeapSort.cpp)
add_executable(QuickSortHoare Sort/QuickSortHoare.cpp)
add_executable(structList structList.cpp)
add_executable(toBinary_List Stack/toBinary_List.cpp)
add_executable(DSCanh-DSKe GraphTheory/DSCanh-DSKe.cpp)
add_executable(DFS GraphTheory/DFS.cpp)
add_executable(DFS2 GraphTheory/DFS2.cpp)
add_executable(DFS3 GraphTheory/DFS3.cpp)
add_executable(BFS GraphTheory/BFS.cpp)
add_executable(findPath GraphTheory/findPath.cpp)
add_executable(connectedOnGrid GraphTheory/connectedOnGrid.cpp)
add_executable(BST Tree/BST.cpp)
add_executable(AVL Tree/AVL.cpp)
add_executable(createQueue Queue/createQueue.cpp)
add_executable(createStack Stack/createStack.cpp)
add_executable(Student LinkedList/Student.cpp)
add_executable(Tree Tree/Tree.cpp)
add_executable(Graphs PracticeGraph/Graphs.cpp)
add_executable(MaTranKe PracticeGraph/DSC_MTK.cpp)
add_executable(DanhSachKe PracticeGraph/DSC_DSK.cpp)
add_executable(DanhSachCanh PracticeGraph/MTK_DSC.cpp)
add_executable(ChuTrinhVoHuong PracticeGraph/ChuTrinhVoHuong.cpp)
add_executable(MTK_DSK PracticeGraph/MTK_DSK.cpp)
add_executable(DSK_MTK PracticeGraph/DSK_MTK.cpp)
add_executable(DeepFirstSerach PracticeGraph/DeepFirstSerach.cpp)
add_executable(BreathFirstSearch PracticeGraph/BreathFirstSearch.cpp)
add_executable(LienThong PracticeGraph/LienThong.cpp)
add_executable(Euler PracticeGraph/Euler.cpp)
add_executable(DuyetBFS Test/DuyetDFS.cpp)
add_executable(twoSum Leetcode/twoSum.cpp)
add_executable(knap_sack DynamicPlanning/knap_sack.cpp)
add_executable(subset_sum DynamicPlanning/subset_sum.cpp)
add_executable(deleteElement Vector/deleteElement.cpp)